--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "linux",
+  "name": "react_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.3.1",
+    "@material-ui/core": "^4.3.2",
     "axios": "^0.19.0",
-    "material-ui": "^0.20.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
